# GhostWire

./: .gitignore  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: auto-merge.yml  codeql.yml  release.yml  rust-clippy.yml
crates/ghostwire-installer/: Cargo.toml
crates/ghostwire-installer/src/: main.rs
crates/ghostwire-installer/wix/: license.rtf  main.wxs
crates/wgyk-cli/: Cargo.toml
crates/wgyk-cli/src/: main.rs
crates/wgyk-core/: Cargo.toml
crates/wgyk-core/src/: error.rs  lib.rs
crates/wgyk-core/src/config/: mod.rs  parser.rs
crates/wgyk-core/src/crypto/: age_yubikey.rs  decrypt.rs  mod.rs
crates/wgyk-core/src/ipc/: frame.rs  messages.rs  mod.rs
crates/wgyk-service/: Cargo.toml
crates/wgyk-service/src/: ipc_server.rs  main.rs  service.rs  state.rs
crates/wgyk-service/src/tunnel/: mod.rs  wg_nt.rs
crates/wgyk-ui/: Cargo.toml  build.rs
crates/wgyk-ui/src/: app.rs  config.rs  ipc.rs  main.rs  state.rs  tray.rs
