[package]
name        = "wgyk-ui"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace = true

[[bin]]
name = "wgyk-ui"
path = "src/main.rs"

[dependencies]
wgyk-core = { path = "../wgyk-core" }

anyhow.workspace             = true
tracing.workspace            = true
tracing-subscriber.workspace = true
secrecy.workspace            = true

# UI
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow"] }
egui   = { workspace = true }

# IPC
serde.workspace      = true
serde_json.workspace = true

# Choix d'un fichier .conf.age
rfd       = "0.15"


image = { version = "0.25", default-features = false, features = ["png"] }

[build-dependencies]
winresource = "0.1"